Added stacked canvases, controls, and credits.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-
-<script src="bitminer.js"></script>
+    <div class="gamediv">
+        <canvas id="entitiesCanvas" width="640" height="480">Please update to a browser that supports canvas.</canvas>
+        <canvas id="tilesCanvas" width="640" height="480">Please update to a browser that supports canvas.</canvas>
+        <canvas id="darknessCanvas" width="640" height="480">Please update to a browser that supports canvas.</canvas>
+    </div>
+    <script src="bitminer.js"></script>
+    <div>
+        Controls:
+        <ul>
+            <li>WASD - Move</li>
+        </ul>
+        Credits:
+        <ul>
+            <li>Sprites: <a href="http://kenney.nl/assets/voxel-pack">Kenney's Voxel Pack</a></li>
+        </ul>
+    </div>
 </body>
 </html>
