Game is now built using browserify.  Everything is in its own module file.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <canvas id="tilesCanvas" width="768" height="640">Please update to a browser that supports canvas.</canvas>
         <canvas id="darknessCanvas" width="768" height="640">Please update to a browser that supports canvas.</canvas>
     </div>
-    <script src="bitminer.js"></script>
+    <script src="bundle.js"></script>
     <div>
         Controls:
         <ul>
